# collective.flow

./: .gitignore  .gitlab-ci.yml  .kopla  CHANGELOG.rst  Dockerfile.docs  MANIFEST.in  Makefile  Makefile.docker  Procfile  README.rst  base.cfg  buildout-base.cfg  buildout-plone-5.0.cfg  buildout-plone-5.x.cfg  buildout.cfg  heroku.cfg  i18n.sh  requirements-buildout.txt  requirements-manual.txt  requirements-plone.txt  requirements-plone50-python27.nix  requirements-plone50-python27.txt  requirements.nix  requirements.txt  setup.cfg  setup.nix  setup.py  shell.nix  test_plone43.cfg  test_plone50.cfg  test_plone51.cfg  test_plone52.cfg
docs/: LICENSE.rst  _robot.rst  _selectors.robot  conf.py  example.rst  index.rst
docs/examples/: supervision-document.xml
src/collective/flow/: __init__.py  behaviors.py  buttons.py  comments.py  configure.py  content.py  defaults.py  fields.py  history.py  interfaces.py  overrides.py  restapi.py  schema.py  subfolder.py  testing.py  transforms.py  utils.py
src/collective/flow/browser/: __init__.py  comments.py  folder.py  history.py  localization.py  menu.py  schema.py  schemaeditor.js  subfolder.py  submission.py  submission_subform.py  viewlets.py  widgets.py
src/collective/flow/browser/comments_templates/: field_comments_form.pt  field_comments_view.pt  reply_form_viewlet.pt
src/collective/flow/browser/folder_templates/: folder_form.pt  folder_listing.pt  submission_view.pt  view_submission.pt
src/collective/flow/browser/history_templates/: field_history_view.pt
src/collective/flow/browser/schema_templates/: view.pt
src/collective/flow/browser/static/: comments.js  default.css  default.js  default.less  logged-in.js  logged-in.less  patterns.aria-expand.js  patterns.folding-fieldsets.css  patterns.folding-fieldsets.js  patterns.folding-fieldsets.less  patterns.python-editor.css  patterns.python-editor.js  patterns.python-editor.less  patterns.script-editor.css  patterns.script-editor.js  patterns.script-editor.less  patterns.style-editor.css  patterns.style-editor.js  patterns.style-editor.less  plone-logged-in.js  styles.css  styles.scss
src/collective/flow/browser/submission_templates/: view.pt
src/collective/flow/browser/viewlets_templates/: metromap_viewlet.pt  submission_actions_viewlet.pt  submission_deleted_viewlet.pt  submission_edit_viewlet.pt
src/collective/flow/browser/widgets_templates/: richtextlabel_display.pt  richtextlabel_input.pt  select_display.pt  widget.pt  widget_layout.pt
src/collective/flow/locales/: collective.flow.pot  plone.pot
src/collective/flow/profiles/default/: actions.xml  browserlayer.xml  metadata.xml  registry.xml  repositorytool.xml  rolemap.xml  types.xml  viewlets.xml  workflows.xml
src/collective/flow/profiles/uninstall/: browserlayer.xml  registry.xml  types.xml
src/collective/flow/tests/: test_robot.py  test_schema.py  test_setup.py  test_supermodel.py
src/collective/flow/tests/robot/: test_example.robot
(+15 files in other folders)
