[metadata]
name = collective.flow
version = 0.4.3.dev0
description =
long_description = file: README.rst, CHANGELOG.rst
keywords = Python Plone
author = Asko Soukka
author_email = asko.soukka@iki.fi
url = https://gitlab.kopla.jyu.fi/plone-packages/collective.flow
license = EUPL
classifiers =
    Programming Language :: Python :: 2.7
    Framework :: Plone :: 5.0
    Framework :: Plone :: 5.1

[options]
include_package_data = True
install_requires =
    setuptools
    lxml
    plone.alterego
    plone.api
    plone.app.dexterity
    plone.memoize
    plone.schemaeditor
    plone.supermodel
    Products.CMFPlone
    pyscss
    venusianconfiguration
    zope.cachedescriptors
namespace_packages =
    collective
package_dir =
    = src
packages = find:
zip_safe = False

[options.packages.find]
where =
    src

[options.extras_require]
test =
    plone.app.imaging
    plone.app.testing
    plone.app.robotframework

[options.entry_points]
z3c.autoinclude.plugin =
    target = plone

[isort]
# http://docs.plone.org/develop/styleguide/python.html#grouping-and-sorting
force_alphabetical_sort = True
force_single_line = True
lines_after_imports = 2
line_length = 200
not_skip = __init__.py
