[metadata]
name = collective.flow
version = 0.8.0
description =
long_description = file: README.rst, CHANGELOG.rst
keywords = Python Plone
author = Asko Soukka
author_email = asko.soukka@iki.fi
url = https://gitlab.kopla.jyu.fi/plone-packages/collective.flow
license = EUPL
classifiers =
    Programming Language :: Python :: 2.7
    Framework :: Plone :: 5.0
    Framework :: Plone :: 5.1

[options]
include_package_data = True
install_requires =
    setuptools
    lxml
    plone.alterego
    plone.api
    plone.app.dexterity
    plone.memoize
    plone.schemaeditor
    plone.supermodel
    Products.CMFPlone
    pyscss
    venusianconfiguration
    zope.cachedescriptors
    zope.proxy
namespace_packages =
    collective
package_dir =
    = src
packages = find:
zip_safe = False

[options.packages.find]
where =
    src

[options.extras_require]
test =
    plone.app.imaging
    plone.app.testing
    plone.app.robotframework

[options.entry_points]
z3c.autoinclude.plugin =
    target = plone

[isort]
# http://docs.plone.org/develop/styleguide/python.html#grouping-and-sorting
force_alphabetical_sort = True
force_single_line = True
lines_after_imports = 2
line_length = 200
not_skip = __init__.py

[yapf]
based_on_style = pep8
allow_multiline_lambdas = True
allow_split_before_dict_value = False
coalesce_brackets = True
dedent_closing_brackets = True
join_multiple_lines = False
space_between_ending_comma_and_closing_bracket = True
split_arguments_when_comma_terminated = True
split_before_expression_after_opening_paren = True
split_before_first_argument = True
split_before_logical_operator = False
split_complex_comprehension = True
